--- a/src/app/content/content.component.html
+++ b/src/app/content/content.component.html
@@ -60,7 +60,7 @@
 							</p-footer>
 					 	</p-dialog>
 				</div>
-				<div align = right>
+				<div align = center>
 					<go-button label="Submit" iconName="check" buttonColor="danger" (click)="submitData()" ></go-button>
 					<go-button label="Clear"  buttonColor="danger" (click)="clearText()" ></go-button><br>
 				</div>
