adjust width of error register dialog

--- a/src/app/content/content.component.html
+++ b/src/app/content/content.component.html
@@ -47,7 +47,7 @@
 					 	</p-dialog>
 						 <p-dialog [header]="errorTitle" [visible]="errorDialogDisplay"
               			[modal] = "isModal" [width] = "width" [height] = "height" 
-										[closable] = 'false'[responsive] = "isResponsive"
+										[closable] = "false" [responsive] = "isResponsive"
 										[draggable] = "false" [showHeader] = "true">
 						
 						<div class="dialog" align="center">
