update ge getting start

--- a/src/app/doc/page-getting-start.html
+++ b/src/app/doc/page-getting-start.html
@@ -55,7 +55,7 @@
                 </div>
 
                 <div role="tabpanel" class="tab-pane fade" id="createProjectAngular2">
-                    <h3 class="card-header"><strong> การสร้าง Project Angular2 </strong></h3>
+                    <h3 class="card-header"><strong> การสร้าง Project Angular </strong></h3>
                     <div class="card-block">
                         <p *ngFor="let data of createProjectAngular"> 
                              {{data.data}} <br>
