--- a/src/app/doc/badge.document.html
+++ b/src/app/doc/badge.document.html
@@ -144,11 +144,11 @@
 			<div class="row row-in-tab">
 				<h6>Badge Button</h6>
 				<div class="col-md-3">
-					<go-badge type="badge-button" labelText="Notification" badgeData="6" badgeColor="info" buttonColor="success" buttonSize="sm"></go-badge><br>
+					<go-badge type="badge-button" labelText="Notification" badgeData="6" badgeColor="danger" buttonSize="sm" badgeStyle="pill"></go-badge><br>
 					<p></p>
-					<go-badge type="badge-button" labelText="Notification" badgeData="6" badgeColor="info" buttonColor="success"></go-badge><br>
+					<go-badge type="badge-button" labelText="Notification" badgeData="6" badgeColor="info" buttonColor="warning"></go-badge><br>
 					<p></p>
-					<go-badge type="badge-button" labelText="Notification" badgeData="6" badgeColor="info" buttonColor="success" buttonSize="lg"></go-badge>
+					<go-badge type="badge-button" labelText="Notification" badgeData="6" badgeColor="success" buttonColor="secondary" buttonSize="lg"></go-badge>
 				</div>
 				<div class="col-md-9">
 					<div role="tab" id="ex_4">
@@ -160,9 +160,9 @@
 					</div>
 					<div id="collapse_ex_4" class="collapse" role="tabpanel" aria-labelledby="ex_4">
 						<div class="jumbotron">
-							<code>&lt;go-badge type="badge-button" labelText="Notification" badgeData="6" badgeColor="info" buttonColor="success" buttonSize="sm"&gt;&lt;/go-badge&gt;</code><br/>
-							<code>&lt;go-badge type="badge-button" labelText="Notification" badgeData="6" badgeColor="info" buttonColor="success"&gt;&lt;/go-badge&gt;</code><br/>
-							<code>&lt;go-badge type="badge-button" labelText="Notification" badgeData="6" badgeColor="info" buttonColor="success" buttonSize="lg"&gt;&lt;/go-badge&gt;</code><br/>
+							<code>&lt;go-badge type="badge-button" labelText="Notification" badgeData="6" badgeColor="danger" buttonSize="sm"  badgeStyle="pill"&gt;&lt;/go-badge&gt;</code><br/>
+							<code>&lt;go-badge type="badge-button" labelText="Notification" badgeData="6" badgeColor="info" buttonColor="warning"&gt;&lt;/go-badge&gt;</code><br/>
+							<code>&lt;go-badge type="badge-button" labelText="Notification" badgeData="6" badgeColor="success" buttonColor="secondary" buttonSize="lg"&gt;&lt;/go-badge&gt;</code><br/>
 						</div>
 					</div>
 				</div>
