--- a/src/app/doc/progressbar.document.html
+++ b/src/app/doc/progressbar.document.html
@@ -125,7 +125,7 @@
 				<div class="col-md-3">
 					<div class="row">
 						<b>{{thirdProgressbarDescription}}</b>
-						<go-progressbar [progress]="progress_3" color="blue" height="5px" [lockOnLoad]="true" [opacity]="0.5" [transitionSpeed]="1000"></go-progressbar>
+						<go-progressbar [progress]="progress_3" color="black" height="5px" [lockOnLoad]="true" [opacity]="0.6" [transitionSpeed]="1000"></go-progressbar>
 						<button class="btn btn-primary btn-sm btn-block" (click)="autoAddProgress_3(10)">เพิ่มค่า progress_3 อัตโนมัติ ทุกวินาทีละ 10 หน่วย</button>
 						<button class="btn btn-primary btn-sm btn-block" (click)="resetProgress_3()">ล้างค่า progress_3</button>
 					</div>
