--- a/src/app/doc/pulldown-menu.document.html
+++ b/src/app/doc/pulldown-menu.document.html
@@ -94,7 +94,7 @@ const PAGELIST: PageListModel&#91;&#93; = &#91; 		//** หรือ PAGELIST: Ar
   &#123;routerLink: 'textarea', menuName: 'Text Area'&#125;,
   &#123;routerLink: 'textbox', menuName: 'Text Box'&#125;,
   &#123;routerLink: 'texteditor', menuName: 'Text Editor'&#125;
-  &#123;outerHref: 'http://www.ascii.cl/htmlcodes.htm', menuName: 'Text Editor'&#125;
+  &#123;outerHref: 'http://www.ascii.cl/htmlcodes.htm', menuName: 'Another Website'&#125;
 &#93;;
 
 const PAGELIST2: PageListModel&#91;&#93; = &#91; 		
@@ -103,7 +103,7 @@ const PAGELIST2: PageListModel&#91;&#93; = &#91;
   &#123;routerLink: 'textarea', menuName: 'Text Area'&#125;,
   &#123;routerLink: 'textbox', menuName: 'Text Box'&#125;,
   &#123;routerLink: 'texteditor', menuName: 'Text Editor'&#125;
-  &#123;outerHref: 'http://www.ascii.cl/htmlcodes.htm', menuName: 'Anoter Website', separated: true&#125;
+  &#123;outerHref: 'http://www.ascii.cl/htmlcodes.htm', menuName: 'Another Website', separated: true&#125;
 &#93;;
 
 @Component(&#123;
