--- a/src/app/doc/step.document.html
+++ b/src/app/doc/step.document.html
@@ -58,13 +58,13 @@
 	<div role="tabpanel" class="tab-pane fade" id="Example">
 		<div class="jumbotron">
 			<div class="row row-in-tab">
-				<div class="col-md-6">
+				<div class="col-md-5">
 					<div class="card-block">
 						<h4> Basic </h4>
 						<p-steps [model]="items1" ></p-steps>
 					</div>
 				</div>
-				<div class="col-md-6">
+				<div class="col-md-7">
 					<div role="tab" id="ex_1">
 						<h5 class="mb-0">
 							<a class="collapsed" data-toggle="collapse" href="#collapse_ex_1" aria-expanded="false" aria-controls="collapse_ex_1">
@@ -80,13 +80,13 @@
 				</div>
 			</div>
 			<div class="row row-in-tab">
-				<div class="col-md-6">
+				<div class="col-md-5">
 					<div class="card-block">
 						<h4> Clickable </h4>						
 						<p-steps [model]="items2" [(activeIndex)]="activeIndex" [readonly]="false"></p-steps>						
 					</div>
 				</div>
-				<div class="col-md-6">
+				<div class="col-md-7">
 					<div role="tab" id="ex_2">
 						<h5 class="mb-0">
 							<a class="collapsed" data-toggle="collapse" href="#collapse_ex_2" aria-expanded="false" aria-controls="collapse_ex_2">
@@ -101,6 +101,48 @@
 					</div>
 				</div>
 			</div>
+			<!--<div class="row row-in-tab">
+				<div class="col-md-4">
+					<div class="card-block">
+						
+					</div>
+				</div>
+				<div class="col-md-8">
+					<div role="tab" id="ex_3">
+						<h5 class="mb-0">
+							<a class="collapsed" data-toggle="collapse" href="#collapse_ex_3" aria-expanded="false" aria-controls="collapse_ex_3">
+							Code Example#3
+							</a>
+						</h5>
+					</div>
+					<div id="collapse_ex_3" class="collapse" role="tabpanel" aria-labelledby="ex_3">
+						<div class="jumbotron">
+							<pre> <code  *ngFor="let codeExample of codeExample3" >{{codeExample.data}} <br></code></pre>
+						</div>
+					</div>
+				</div>
+			</div>-->
+			<!--<div class="row row-in-tab">
+				<div class="col-md-4">
+					<div class="card-block">
+						
+					</div>
+				</div>
+				<div class="col-md-8">
+					<div role="tab" id="ex_4">
+						<h5 class="mb-0">
+							<a class="collapsed" data-toggle="collapse" href="#collapse_ex_4" aria-expanded="false" aria-controls="collapse_ex_3">
+							Code Example#3
+							</a>
+						</h5>
+					</div>
+					<div id="collapse_ex_4" class="collapse" role="tabpanel" aria-labelledby="ex_4">
+						<div class="jumbotron">
+							<pre> <code  *ngFor="let codeExample of codeExample4" >{{codeExample.data}} <br></code></pre>
+						</div>
+					</div>
+				</div>
+			</div>-->
 		</div>
 	</div>
 </div>
