--- a/src/app/doc/table.document.html
+++ b/src/app/doc/table.document.html
@@ -209,21 +209,21 @@
 							<th>ค่า sort</th>
 						</tr>
 						<tr>
-							<td>รวมทุกคอลัมภ์</td>
+							<td>รวมทุกคอลัมน์</td>
 							<td>{{filterAll}}</td>
 						</tr>
 						<tr>
-							<td>คอลัมภ์ 1</td>
+							<td>คอลัมน์ 1</td>
 							<td>{{filter_1}}</td>
 							<td>{{sort_1}}</td>
 						</tr>
 						<tr>
-							<td>คอลัมภ์ 2</td>
+							<td>คอลัมน์ 2</td>
 							<td>{{filter_2}}</td>
 							<td>{{sort_2}}</td>
 						</tr>
 						<tr>
-							<td>คอลัมภ์ 3</td>
+							<td>คอลัมน์ 3</td>
 							<td>{{filter_3}}</td>
 							<td>{{sort_3}}</td>
 						</tr>
