--- a/src/app/doc/textbox.document.html
+++ b/src/app/doc/textbox.document.html
@@ -172,7 +172,7 @@
 			<div class="row row-in-tab">
 				<div class="col-md-3">
 					<label><strong>Currency box with tooptip positioning</strong></label>
-					<go-textbox type="currency" [(ngModel)]="currency_box" goId="currency_box" warningPos="bottom" warningText="กรุณาระบุรูปแบบตัวเลขให้ถูกต้อง"></go-textbox>
+					<go-textbox type="currency" [(ngModel)]="currency_box" goId="currency_box"></go-textbox>
 					<small>*ทดสอบโดยการระบุตัวอักษรลงไปและเอาเม้าส์ชี้*</small>
 				</div>
 				<div class="col-md-9">
