--- a/src/app/doc/datatable.document.html
+++ b/src/app/doc/datatable.document.html
@@ -156,7 +156,7 @@
 				<div class="col-md-5">
 					<div class="card-block">
 						<h4> Paginator &amp; Sort &amp; Template</h4>
-						<p-dataTable [value]="dataTable2" [rows]="5" [paginator]="true" [rowsPerPageOptions]="[5,10,20]" sortMode="multiple">
+						<p-dataTable [value]="dataTable2" [rows]="5" [paginator]="true" [rowsPerPageOptions]="[5,10]" sortMode="multiple">
                             <p-header>List of Cars</p-header>
 							<p-column field="vin" header="Vin" [sortable]="true"></p-column>
                             <p-column field="year" header="Year" [sortable]="true"></p-column>
@@ -189,8 +189,10 @@
 					<div class="card-block">
 						<h4> Filter &amp; Editable &amp; Selection</h4>
 						<div class="ui-widget-header" style="padding:4px 10px;border-bottom: 0 none">
-							<i class="fa fa-search" style="margin:4px 4px 0 0"></i>
-							<input #gb type="text" pInputText size="30" placeholder="Global Filter">
+							<div class="row"> 
+								<i class="col col-md-1  fa fa-search" ></i> 
+								<input class="col col-md-10" #gb type="text"  placeholder="Global Filter">
+							</div>
 						</div>
 						<p-dataTable [value]="dataTable3" [rows]="5" [paginator]="true" [globalFilter]="gb" [editable]="true" selectionMode="multiple" [(selection)]="selectedDatas">
 							<p-column field="vin" header="Vin (startsWith)" [filter]="true" filterPlaceholder="Search" [editable]="true"></p-column>
