--- a/src/app/doc/tooltip.document.html
+++ b/src/app/doc/tooltip.document.html
@@ -69,6 +69,7 @@
 				<div class="col-md-4">
 					<div class="card-block">
 						<div class="row form-group">
+							<h3>Tooltip on Button<br></h3>
 							<div class="col-md-5 form-inline">
 								<go-button label="Right" buttonColor="danger"  pTooltip="tooltip position right"></go-button>
 							</div>
@@ -76,6 +77,7 @@
 								<go-button label="Left" buttonColor="info"  pTooltip="tooltip position left" tooltipPosition="left"></go-button> 
 							</div>		
 						</div>
+						
 						<div class="row form-group">
 							<div class="col-md-5 form-inline">
 								<go-button label="Top" buttonColor="warning"  pTooltip="tooltip position top" tooltipPosition="top"></go-button> 
@@ -85,7 +87,16 @@
 							</div>		
 						</div>
 					</div>
+				<div class="col-md-4">
+					<div class="car-block">
+						<div class="row form-group">
+								<h3>ToolTip on Textbox<br></h3>
+								<input pTooltip = "Textbox Tooltip" placeholder="Mouse On Me!!" type="text" ng-reflect-text="Enter your name">
+							</div>
+						</div>	
+					</div>
 				</div>
+				
 				<div class="col-md-8">
 					<div role="tab" id="ex_1">
 						<h5 class="mb-0">
@@ -101,71 +112,5 @@
 					</div>
 				</div>
 			</div>
-			<!--<div class="row row-in-tab">
-				<div class="col-md-4">
-					<div class="card-block">
-						<h3>Focus and Blur</h3>
-						<go-textbox defaultValue="Right" type="text" pTooltip="Enter your username" tooltipEvent="hover" colorTheme="success"></go-textbox>
-						<input type="text"  pTooltip="Enter your username" placeholder="Right" tooltipEvent="focus" >	
-					</div>
-				</div>
-				<div class="col-md-8">
-					<div role="tab" id="ex_2">
-						<h5 class="mb-0">
-							<a class="collapsed" data-toggle="collapse" href="#collapse_ex_2" aria-expanded="false" aria-controls="collapse_ex_2">
-							Code Example#2
-							</a>
-						</h5>
-					</div>
-					<div id="collapse_ex_2" class="collapse" role="tabpanel" aria-labelledby="ex_2">
-						<div class="jumbotron">
-							<pre> <code  *ngFor="let codeExample of codeExample2" >{{codeExample.data}} <br></code> </pre>
-						</div>
-					</div>
-				</div>
-			</div>-->
-			<!--<div class="row row-in-tab">
-				<div class="col-md-4">
-					<div class="card-block">
-						
-					</div>
-				</div>
-				<div class="col-md-8">
-					<div role="tab" id="ex_3">
-						<h5 class="mb-0">
-							<a class="collapsed" data-toggle="collapse" href="#collapse_ex_3" aria-expanded="false" aria-controls="collapse_ex_3">
-							Code Example#3
-							</a>
-						</h5>
-					</div>
-					<div id="collapse_ex_3" class="collapse" role="tabpanel" aria-labelledby="ex_3">
-						<div class="jumbotron">
-							<pre> <code  *ngFor="let codeExample of codeExample3" >{{codeExample.data}} <br></code></pre>
-						</div>
-					</div>
-				</div>
-			</div>-->
-			<!--<div class="row row-in-tab">
-				<div class="col-md-4">
-					<div class="card-block">
-						
-					</div>
-				</div>
-				<div class="col-md-8">
-					<div role="tab" id="ex_4">
-						<h5 class="mb-0">
-							<a class="collapsed" data-toggle="collapse" href="#collapse_ex_4" aria-expanded="false" aria-controls="collapse_ex_3">
-							Code Example#3
-							</a>
-						</h5>
-					</div>
-					<div id="collapse_ex_4" class="collapse" role="tabpanel" aria-labelledby="ex_4">
-						<div class="jumbotron">
-							<pre> <code  *ngFor="let codeExample of codeExample4" >{{codeExample.data}} <br></code></pre>
-						</div>
-					</div>
-				</div>
-			</div>-->
 		</div>
-	</div>
 </div>
