--- a/src/app/doc/tree.document.html
+++ b/src/app/doc/tree.document.html
@@ -29,7 +29,7 @@
 		</div>
 		<div class="jumbotron">
 			<div class="card-title">
-				<h3> Release Update {{releaseDay}}</h3>
+				<h2> Release Update </h2>
 			</div>
 			<div class="card-block">
 				<li *ngFor="let line of releaseUpdate"> <b> {{line.head}}</b>: {{line.data}} </li>		
