--- a/src/app/content/content.component.html
+++ b/src/app/content/content.component.html
@@ -13,7 +13,7 @@
 					<div class="row" style="margin-top: 1rem;">
 						<div class="col-sm-12 col-md-12 col-lg-12">
 						<h5>Component Pack</h5>
-						<p>สามารถใช้งาน component ได้ง่ายขึ้น เพียงเรียกใช้ไฟล์ gomodule.umd.js และ libmodule.umd.js ดูตัวอย่างการเใช้งานได้ที่ <a [routerLink]="['gettingstart']"><strong><em>Getting Start</em></strong></a> ที่เมนู Existing Angular Project</p><br><br><br><br><br><br><br>
+						<p>สามารถใช้งาน component ทั้งหมดได้ โดยเรียกใช้ไฟล์ gomodule.umd.js และ libmodule.umd.js ดูตัวอย่างการใช้งานได้ที่ <go-button label="Getting Start" buttonColor="danger" [routerLink]="['gettingstart']" buttonSize="sm"></go-button> ที่เมนู Existing Angular Project</p><br><br><br><br><br><br><br>
 						</div>
 					</div>
 				</div>
