--- a/src/app/doc/page-getting-start.html
+++ b/src/app/doc/page-getting-start.html
@@ -16,9 +16,14 @@
         <div class="col-md-9">
             <div class="tab-content">
                 <div  role="tabpanel" class="tab-pane active" id="prerequisiteInstall">
+                    <h3 class="card-header "><strong> Download Installer </strong></h3>
+                    <div class="card-block">
+                        <p>Download ตัว installer ทั้งหมดจากลิ้งค์ด้านล่าง</p>
+                        <a href="http://10.182.247.73/go-cdn-dev/installerX86.zip"><i class="fa fa-download"></i> Installer for Windows x86</a><br>
+                        <a href="http://10.182.247.73/go-cdn-dev/installerX64.zip"><i class="fa fa-download"></i> Installer for Windows x64</a>
+                    </div>
                     <h3 class="card-header "><strong> การติดตั้ง Nodejs </strong></h3>
                     <div class="card-block">
-                        <p> 1. ดาวน์โหลด Nodejs ผ่านเว็บไซต์ <a href="https://nodejs.org/en/download/" target="_blank" > https://nodejs.org </a></p>
                         <p *ngFor="let data of setupNodejs"> 
                              {{data.data}} <br>
                             <code *ngIf="data.code != null"> {{data.code}} </code> 
@@ -27,10 +32,8 @@
                     </div>
                     <h3 class="card-header"><strong> การติดตั้ง Git </strong></h3>
                     <div class="card-block">
-                        <p> 1.	ติดตั้ง Git สำหรับ Windows โดยดาวน์โหลดจาก <a href="https://git-scm.com/downloads" target="_blank" > git-scm.com </a></p>
-                        <p> 2.	คลิกขวา เลือก Run as administrator เพื่อเข้าสู่ขั้นตอนการติดตั้ง (ดูรายละเอียดการติดตั้งได้ที่ <a href="http://www.artit-k.com/dev-install-git-for-windows" target="_blank" > http://www.artit-k.com/dev-install-git-for-windows</a> ) </p>
                         <div *ngFor="let data of setupGit"> 
-                            <p> {{data.data}} </p>
+                            <p [innerHTML]="data.data"></p>
                             <code *ngIf="data.code != null"> {{data.code}} </code>
                         </div>
                     </div>
