--- a/src/app/doc/textbox.document.html
+++ b/src/app/doc/textbox.document.html
@@ -22,10 +22,11 @@
 						<li>ใช้งานร่วมกับ form validation ได้</li>
 						<li>ระบุรูปแบบข้อมูลของ textbox type currency ได้</li>
 						<li>ระบุ regular expression ที่ต้องการใช้ validate ข้อมูลได้</li>
-						<li>กำหนดให้เป็น textbox ที่ถูกปิด(disable) หรืออ่านได้อย่างเดียว(readonly) ได้</li>
+						<li>กำหนดให้เป็น textbox ที่ถูกปิด(disable) หรืออ่านได้อย่างเดียว(read-only) ได้</li>
 						<li>กำหนดความยาวสูงสุดในการรับข้อมูลได้</li>
 						<li>ใส่สีให้กับ textbox ได้</li>
 						<li>กำหนดข้อความเตือน และตำแหน่งของข้อความได้</li>
+						
 					</ul>
 				</div>
 				<div class="col-md-6">
@@ -120,7 +121,7 @@
 							<p></p>
 							<p></p>
 							<p>component.ts</p>
-							<pre><code>basic_textbox = 'John';</code></pre>
+							<code>basic_textbox = 'John';</code>
 						</div>
 					</div>
 				</div>
@@ -141,6 +142,10 @@
 					<div id="collapse_ex_password_box" class="collapse" role="tabpanel" aria-labelledby="ex_password_box">
 						<div class="jumbotron">
 							<code>&lt;go-textbox type="password" [(ngModel)]="password_box" maxlength="6" goId="password_box"&gt;&lt;/go-textbox&gt;</code>
+							<p></p>
+							<p></p>
+							<p>component.ts</p>
+							<code>password_box: string;</code>
 						</div>
 					</div>
 				</div>
@@ -164,7 +169,7 @@
 							<p></p>
 							<p></p>
 							<p>component.ts</p>
-							<pre><code>number_box = 1111;</code></pre>
+							<code>number_box = 1111;</code>
 						</div>
 					</div>
 				</div>
@@ -172,7 +177,7 @@
 			<div class="row row-in-tab">
 				<div class="col-md-3">
 					<label><strong>Currency box with tooptip positioning</strong></label>
-					<go-textbox type="currency" [(ngModel)]="currency_box" goId="currency_box"></go-textbox>
+					<go-textbox type="currency" [(ngModel)]="currency_box" goId="currency_box" warningPos="bottom" warningText="กรุณาระบุรูปแบบตัวเลขให้ถูกต้อง"></go-textbox>
 					<small>*ทดสอบโดยการระบุตัวอักษรลงไปและเอาเม้าส์ชี้*</small>
 				</div>
 				<div class="col-md-9">
@@ -189,7 +194,7 @@
 							<p></p>
 							<p></p>
 							<p>component.ts</p>
-							<pre><code>currency_box = 1111.22;</code></pre>
+							<code>currency_box = 1111.22;</code>
 						</div>
 					</div>
 				</div>
@@ -215,8 +220,8 @@
 							<p></p>
 							<p></p>
 							<p>component.ts</p>
-							<pre><code>currency_validate = 1111.22;</code></pre>
-							<pre><code>isValidFlag: boolean;</code></pre>
+							<code>currency_validate = 1111.22;</code><br>
+							<code>isValidFlag: boolean;</code>
 						</div>
 					</div>
 				</div>
@@ -244,12 +249,17 @@
 		goId="email_1" placeholder="example@host.com"&gt;&lt;/go-textbox&gt;
 	&lt;button type="submit" class="btn btn-default" [disabled]="!emailForm.form.valid"&gt;Submit&lt;/button&gt;
 &lt;/form&gt;</code></pre>
+							<p></p>
+							<p></p>
+							<p>component.ts</p>
+							<code>form_validate: string;</code>
 						</div>
 					</div>
 				</div>
 			</div>
 			<div class="row row-in-tab">
 				<div class="col-md-3">
+
 					<label><strong>Password with customRegExp</strong></label>
 					<go-textbox [(ngModel)]="custom_validate" [(isValid)]="isValidCustomFlag" type="password" goId="custom_validate" [customRegExp]="regExp"></go-textbox>
 					<p>is valid password: {{isValidCustomFlag}}</p>
@@ -269,8 +279,9 @@
 							<p></p>
 							<p></p>
 							<p>component.ts</p>
-							<pre><code>regExp = {{regExp}}</code></pre>
-							<pre><code>isValidCustomFlag: boolean;</code></pre>
+							<code>custom_validate: string;</code><br>
+							<code>regExp = {{regExp}};</code><br>
+							<code>isValidCustomFlag: boolean;</code>
 						</div>
 					</div>
 				</div>
@@ -291,13 +302,17 @@
 					<div id="collapse_ex_disable_textbox" class="collapse" role="tabpanel" aria-labelledby="ex_disable_textbox">
 						<div class="jumbotron">
 							<code>&lt;go-textbox type="text" [(ngModel)]="disable_textbox" goId="disable_textbox" disable="true"&gt;&lt;/go-textbox&gt;</code><br>
+							<p></p>
+							<p></p>
+							<p>component.ts</p>
+							<code>disable_textbox = 'John';</code>
 						</div>
 					</div>
 				</div>
 			</div>
 			<div class="row row-in-tab">
 				<div class="col-md-3">
-					<label><strong>Readonly textbox</strong></label>
+					<label><strong>Read-only textbox</strong></label>
 					<go-textbox type="text" [(ngModel)]="readonly_textbox" goId="textbox_2" readonly="true"></go-textbox>
 				</div>
 				<div class="col-md-9">
@@ -311,6 +326,10 @@
 					<div id="collapse_ex_readonly_textbox" class="collapse" role="tabpanel" aria-labelledby="ex_readonly_textbox">
 						<div class="jumbotron">
 							<code>&lt;go-textbox type="text" [(ngModel)]="readonly_textbox" goId="textbox_2" readonly="true"&gt;&lt;/go-textbox&gt;</code><br>
+							<p></p>
+							<p></p>
+							<p>component.ts</p>
+							<code>readonly_textbox = 'John';</code>
 						</div>
 					</div>
 				</div>
@@ -332,6 +351,10 @@
 					<div id="collapse_ex_required_textbox" class="collapse" role="tabpanel" aria-labelledby="ex_required_textbox">
 						<div class="jumbotron">
 							<code>&lt;go-textbox [(ngModel)]="required_textbox" type="text" required goId="required_textbox"&gt;&lt;/go-textbox&gt;</code><br>
+							<p></p>
+							<p></p>
+							<p>component.ts</p>
+							<code>required_textbox: string;</code>
 						</div>
 					</div>
 				</div>
@@ -358,6 +381,13 @@
 							<code>&lt;go-textbox type="text" [(ngModel)]="color_textbox_2" goId="color_textbox_2" colorTheme="info"&gt;&lt;/go-textbox&gt;</code><br>
 							<code>&lt;go-textbox type="text" [(ngModel)]="color_textbox_3" goId="color_textbox_3" colorTheme="warning"&gt;&lt;/go-textbox&gt;</code><br>
 							<code>&lt;go-textbox type="text" [(ngModel)]="color_textbox_4" goId="color_textbox_4" colorTheme="danger"&gt;&lt;/go-textbox&gt;</code><br>
+							<p></p>
+							<p></p>
+							<p>component.ts</p>
+							<code>color_textbox_1: string;</code><br>
+							<code>color_textbox_2: string;</code><br>
+							<code>color_textbox_3: string;</code><br>
+							<code>color_textbox_4: string;</code>
 						</div>
 					</div>
 				</div>
